# public-layers-old

./: .gitignore  Makefile  build.sh  generate_bucket_name.py  package-lock.json  package.json  pyproject.toml  schema.json  template_artifacts_bucket.yml  test.yml
.github/workflows/: deploy.yml  lint.yml  test_build.yml  test_build_amd64.yml  test_build_arm64.yml
templates/: zstd.yml
